# carrot-summary

./: README.md
.kiro/hooks/: restart-flowtrack.kiro.hook
.kiro/specs/flowtrack/: design.md  requirements.md  tasks.md
docs/: CNAME  index.html
flowtrack/: .gitignore  README.md  flowtrack.spec  pyproject.toml  start.bat  start.sh
flowtrack/flowtrack/: __init__.py  main.py
flowtrack/flowtrack/core/: __init__.py  classifier.py  config.py  context_analyzer.py  models.py  news_fetcher.py  pomodoro.py  screen_analyzer.py  tracker.py
flowtrack/flowtrack/persistence/: __init__.py  store.py
flowtrack/flowtrack/platform/: __init__.py  factory.py  macos.py  macos_observer.py  windows.py
flowtrack/flowtrack/reporting/: __init__.py  email_sender.py  exporter.py  formatter.py
flowtrack/flowtrack/ui/: __init__.py  app.py  settings.py  web.py
flowtrack/flowtrack/ui/static/: app.js  style.css
flowtrack/flowtrack/ui/templates/: dashboard.html
flowtrack/scripts/: build_macos.sh  build_windows.bat  install_mac.sh  rebuild.sh
flowtrack/tests/: __init__.py  test_app.py  test_classifier.py  test_config.py  test_context_analyzer.py  test_email_sender.py  test_exporter.py  test_formatter.py  test_macos_provider.py  test_main.py  test_pomodoro.py  test_settings.py  test_store.py  test_summary.py  test_tracker.py  test_web_activity.py  test_window_provider.py  test_windows_provider.py
